<?xml version="1.0"?>
<package format="2">
  <name>battery</name>
  <version>0.0.0</version>
  <description>The battery package</description>
  <maintainer email="joep.w.jansen@gmail.com">Joep Jansen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
  </export>
</package>
